--- a/docker/jenkins_tf/pipeline1/Jenkinsfile
+++ b/docker/jenkins_tf/pipeline1/Jenkinsfile
@@ -7,6 +7,7 @@ node {
             ls -ltr
             terraform init
         """
+        deleteDir()
     }
     stage('plan') {
       // sh label: 'terraform plan', script: "terraform plan -out=tfplan -input=false -var image_name=${image_name} -var ext_port=${ext_port}"
