Terraform work with docker added

--- a/docker/jenkins_tf/Dockerfile
+++ b/docker/jenkins_tf/Dockerfile
@@ -6,5 +6,6 @@ RUN add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/$(. /
 RUN apt-get update -y
 RUN apt-get install -y docker-ce docker-ce-cli containerd.io
 RUN curl -O https://releases.hashicorp.com/terraform/0.12.24/terraform_0.12.24_linux_amd64.zip && unzip terraform_0.12.24_linux_amd64.zip -d /usr/local/bin/
+RUN usermod -aG docker jenkins
 USER ${user}
 
